Implement more of our Parser
- Start work on parsing let statements.
- Implement an error field in our parser, which stores an error if an expected token type is not peeked.
- Also add some helper functions to our parser.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,12 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_executable(punky src/main.cpp src/readline.cpp src/utils.cpp src/Lexer.cpp
-                     src/Token.cpp src/ast.cpp)
+add_executable(
+  punky
+  src/main.cpp
+  src/readline.cpp
+  src/utils.cpp
+  src/Lexer.cpp
+  src/Token.cpp
+  src/ast.cpp
+  src/Parser.cpp)
