--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(
   VERSION 0.1.0
   LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
@@ -16,4 +16,6 @@ add_executable(
   src/Lexer.cpp
   src/Token.cpp
   src/ast.cpp
-  src/Parser.cpp)
+  src/Parser.cpp
+  src/Object.cpp
+  src/Evaluator.cpp)
