Start implementing the Environment
- Just a wrapper around an unordered_map for now.
- Look into moving both name and value in the setter.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,5 @@ add_executable(
   src/ast.cpp
   src/Parser.cpp
   src/Object.cpp
-  src/Evaluator.cpp)
+  src/Evaluator.cpp
+  src/Environment.cpp)
