treewide: Update CMake project structrue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,15 +8,5 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_executable(
-  punky
-  src/main.cpp
-  src/readline.cpp
-  src/utils.cpp
-  src/Lexer.cpp
-  src/Token.cpp
-  src/ast.cpp
-  src/Parser.cpp
-  src/Object.cpp
-  src/Evaluator.cpp
-  src/Environment.cpp)
+add_subdirectory(third-party/linenoise)
+add_subdirectory(src)
